--- a/html/SS22.html
+++ b/html/SS22.html
@@ -10,30 +10,20 @@
       integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="../css/style.css" />
+    <link rel="stylesheet" href="../css/main.css" />
     <title>Coleccion</title>
   </head>
   <body class="body">
     <header>
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="../index.html">FVCK</a>
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-toggle="collapse"
-          data-target="#navbarNav"
-          aria-controls="navbarNav"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a class="nav-link" href="../index.html"
-                >INICIO <span class="sr-only">(current)</span></a
-              >
+              <a class="nav-link" href="../index.html">INICIO <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="./hombre.html">HOMBRE</a>
@@ -66,74 +56,38 @@
 
     <h2 class="h2">TEMPORADA DE PRIMAVERA</h2>
 
-    <div class="div1">
-      <div class="div2">
-        <div class="foto">
-          <a href="#">
-            <img src="../imagenes/ss22/ss1.jpg" alt="ss1" />
-          </a>
-        </div>
-        <div class="texto1">
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore,
-            veniam.
-          </p>
+    <section class="tarjeta_ss">
+      <div class="galeria" style="--i: url(../imagenes/ss22/ss1.jpg)">
+        <div class="texto">
+          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Unde nobis iure officiis nihil quam excepturi nostrum et illo aspernatur tenetur!</p>
         </div>
       </div>
-      <div class="div2">
-        <div class="foto">
-          <a href="#">
-            <img src="../imagenes/ss22/ss2.jpg" alt="ss2" />
-          </a>
-        </div>
-        <div class="texto1">
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore,
-            veniam.
-          </p>
+      <div class="galeria" style="--i: url(../imagenes/ss22/ss2.jpg)">
+        <div class="texto">
+          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Unde nobis iure officiis nihil quam excepturi nostrum et illo aspernatur tenetur!</p>
         </div>
       </div>
-      <div class="div2">
-        <div class="foto">
-          <a href="#">
-            <img src="../imagenes/ss22/ss3.jpg" alt="ss3" />
-          </a>
-        </div>
-        <div class="texto1">
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore,
-            veniam.
-          </p>
+      <div class="galeria" style="--i: url(../imagenes/ss22/ss3.jpg)">
+        <div class="texto">
+          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Unde nobis iure officiis nihil quam excepturi nostrum et illo aspernatur tenetur!</p>
         </div>
       </div>
-      <div class="div2">
-        <div class="foto">
-          <a href="#">
-            <img src="../imagenes/ss22/ss4.jpg" alt="ss4" />
-          </a>
-        </div>
-        <div class="texto1">
-          <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore,
-            veniam.
-          </p>
+      <div class="galeria" style="--i: url(../imagenes/ss22/ss4.jpg)">
+        <div class="texto">
+          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Unde nobis iure officiis nihil quam excepturi nostrum et illo aspernatur tenetur!</p>
         </div>
       </div>
-    </div>
+    </section>
 
     <footer>
       <ul>
-        <li><a href="./html/contacto.html">Contacto</a></li>
+        <li><a href="./contacto.html">Contacto</a></li>
         <li><a href="#">Terminos Y Condiciones</a></li>
         <li><a href="https://www.instagram.com/">Instagram</a></li>
       </ul>
     </footer>
 
-    <script
-      src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
-      integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
-      crossorigin="anonymous"
-    ></script>
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"
       integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
