--- a/html/contacto.html
+++ b/html/contacto.html
@@ -10,30 +10,20 @@
       integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="../css/style.css" />
+    <link rel="stylesheet" href="../css/main.css" />
     <title>Contacto</title>
   </head>
   <body class="body">
     <header>
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="../index.html">FVCK</a>
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-toggle="collapse"
-          data-target="#navbarNav"
-          aria-controls="navbarNav"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a class="nav-link" href="../index.html"
-                >INICIO <span class="sr-only">(current)</span></a
-              >
+              <a class="nav-link" href="../index.html">INICIO <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="./hombre.html">HOMBRE</a>
@@ -56,12 +46,7 @@
       <div class="form-row">
         <div class="form-group col-md-6">
           <label for="inputEmail4">Email</label>
-          <input
-            type="email"
-            class="form-control"
-            id="inputEmail4"
-            placeholder="Email"
-          />
+          <input type="email" class="form-control" id="inputEmail4" placeholder="Email" />
         </div>
         <div class="form-group col-md-6">
           <label for="inputPassword4">Contraseña</label>
@@ -83,28 +68,16 @@
         </div>
         <div class="form-group col-md-4">
           <label for="inputState">Ciudad</label>
-          <select id="inputState" class="form-control">
-            <option selected>Selecciona</option>
-            <option>...</option>
-          </select>
+          <input type="text" class="form-control" id="inputCity" />
         </div>
         <div class="form-group col-md-2">
           <label for="inputZip">Codigo Postal</label>
           <input type="text" class="form-control" id="inputZip" />
         </div>
       </div>
-      <div class="custom-file">
-        <label for="input"></label>
-        <input
-          type="file"
-          class="custom-file-input"
-          id="validatedCustomFile"
-          required
-        />
-        <label class="custom-file-label" for="validatedCustomFile"
-          >Selecciona tu CV...</label
-        >
-        <div class="invalid-feedback">Example invalid custom file feedback</div>
+      <div class="mb-3">
+        <label for="formFile" class="form-label">Selecciona tu CV</label>
+        <input class="form-control" type="file" id="formFile" />
       </div>
       <button type="submit" class="btn btn-primary">Enviar</button>
     </form>
@@ -117,11 +90,7 @@
       </ul>
     </footer>
 
-    <script
-      src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
-      integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
-      crossorigin="anonymous"
-    ></script>
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"
       integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
