--- a/html/mujer.html
+++ b/html/mujer.html
@@ -10,30 +10,20 @@
       integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="../css/style.css" />
+    <link rel="stylesheet" href="../css/main.css" />
     <title>Mujer</title>
   </head>
   <body class="body">
     <header>
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="../index.html">FVCK</a>
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-toggle="collapse"
-          data-target="#navbarNav"
-          aria-controls="navbarNav"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a class="nav-link" href="../index.html"
-                >INICIO <span class="sr-only">(current)</span></a
-              >
+              <a class="nav-link" href="../index.html">INICIO <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="./hombre.html">HOMBRE</a>
@@ -52,71 +42,89 @@
       </nav>
     </header>
 
-    <main class="spring">
-      <h3>PRIMAVERA 22'</h3>
-    </main>
-
-    <section class="hombremujer">
-      <div class="img"></div>
-      <div class="text">
-        <h3>ROPA DE PRIMAVERA</h3>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus aliquam
-          maiores ratione, doloribus tenetur alias doloremque ab error beatae
-          aspernatur, omnis veniam quam culpa esse nisi, dicta est harum illo
-          eveniet! Cumque nobis, harum iste corrupti accusantium voluptas et eum
-          libero dignissimos tenetur aspernatur voluptatem placeat commodi
-          nesciunt in minima optio, quod assumenda eius, voluptatum asperiores
-          ea voluptates? Debitis consequuntur reprehenderit ea recusandae
-          perferendis culpa. Voluptate itaque iure alias ex.
-        </p>
+    <section class="banner">
+      <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+        <ol class="carousel-indicators">
+          <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+        </ol>
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img class="d-block w-100" src="../imagenes/mujer/mujer1.jpg" alt="First slide" />
+            <div class="carousel-caption d-md-block">
+              <h2><a href="#">COLECCIÓN MUJERES</a></h2>
+              <p>UNA COLLEZIONE UNICA</p>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img class="d-block w-100" src="../imagenes/mujer/mujer.jpg" alt="Second slide" />
+            <div class="carousel-caption d-md-block">
+              <h2><a href="#">COLECCIÓN MUJERES</a></h2>
+              <p>UNA COLLEZIONE UNICA</p>
+            </div>
+          </div>
+        </div>
+        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="sr-only">Next</span>
+        </a>
       </div>
     </section>
 
-    <section class="hombremujer1">
-      <div></div>
-    </section>
+    <h3 class="h3_mujer">SECCIONES</h3>
 
-    <div class="galeria">
-      <div class="fotos">
-        <img src="../imagenes/prototipo.jpg" alt="" class="imagen__galeria" />
+    <section class="tarjeta_mujer">
+      <div class="galeria" style="--i: url(../imagenes/mujer/abrigo.jpg)">
+        <div class="texto">
+          <a href="#">ABRIGOS</a>
+          <p>Lorem ipsum dolor sit amet.</p>
+        </div>
       </div>
-      <div class="fotos">
-        <img src="../imagenes/prototipo.jpg" alt="" class="imagen__galeria" />
+      <div class="galeria" style="--i: url(../imagenes/mujer/accesorios.jpg)">
+        <div class="texto">
+          <a href="#">ACCESORIOS</a>
+          <p>Lorem ipsum dolor sit amet.</p>
+        </div>
       </div>
-      <div class="fotos">
-        <img src="../imagenes/prototipo.jpg" alt="" class="imagen__galeria" />
+      <div class="galeria" style="--i: url(../imagenes/mujer/pantalon.jpg)">
+        <div class="texto">
+          <a href="#">PANTALONES</a>
+          <p>Lorem ipsum dolor sit amet.</p>
+        </div>
       </div>
-      <div class="fotos">
-        <img src="../imagenes/prototipo.jpg" alt="" class="imagen__galeria" />
+      <div class="galeria" style="--i: url(../imagenes/mujer/zapatilla.jpg)">
+        <div class="texto">
+          <a href="#">ZAPATILLAS</a>
+          <p>Lorem ipsum dolor sit amet.</p>
+        </div>
       </div>
-      <div class="fotos">
-        <img src="../imagenes/prototipo.jpg" alt="" class="imagen__galeria" />
+      <div class="galeria" style="--i: url(../imagenes/mujer/remera.jpg)">
+        <div class="texto">
+          <a href="#">REMERAS</a>
+          <p>Lorem ipsum dolor sit amet.</p>
+        </div>
       </div>
-      <div class="fotos">
-        <img src="../imagenes/prototipo.jpg" alt="" class="imagen__galeria" />
+      <div class="galeria" style="--i: url(../imagenes/mujer/ropainterior.jpg)">
+        <div class="texto">
+          <a href="#">ROPA INTERIOR</a>
+          <p>Lorem ipsum dolor sit amet.</p>
+        </div>
       </div>
-      <div class="fotos">
-        <img src="../imagenes/prototipo.jpg" alt="" class="imagen__galeria" />
-      </div>
-      <div class="fotos">
-        <img src="../imagenes/prototipo.jpg" alt="" class="imagen__galeria" />
-      </div>
-    </div>
+    </section>
 
     <footer>
       <ul>
-        <li><a href="./html/contacto.html">Contacto</a></li>
+        <li><a href="./contacto.html">Contacto</a></li>
         <li><a href="#">Terminos Y Condiciones</a></li>
         <li><a href="https://www.instagram.com/">Instagram</a></li>
       </ul>
     </footer>
 
-    <script
-      src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
-      integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
-      crossorigin="anonymous"
-    ></script>
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"
       integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
