--- a/index.html
+++ b/index.html
@@ -10,30 +10,20 @@
       integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="./css/main.css" />
     <title>FVCK</title>
   </head>
   <body>
     <header>
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="./index.html">FVCK</a>
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-toggle="collapse"
-          data-target="#navbarNav"
-          aria-controls="navbarNav"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a class="nav-link" href="./index.html"
-                >INICIO <span class="sr-only">(current)</span></a
-              >
+              <a class="nav-link" href="./index.html">INICIO <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="./html/hombre.html">HOMBRE</a>
@@ -53,70 +43,40 @@
     </header>
 
     <section class="banner">
-      <div
-        id="carouselExampleIndicators"
-        class="carousel slide"
-        data-ride="carousel"
-      >
+      <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
         <ol class="carousel-indicators">
-          <li
-            data-target="#carouselExampleIndicators"
-            data-slide-to="0"
-            class="active"
-          ></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
           <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
           <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
         </ol>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img
-              class="d-block w-100"
-              src="./imagenes/1.jpg"
-              alt="First slide"
-            />
-            <div class="carousel-caption d-none d-md-block">
+            <img class="d-block w-100" src="./imagenes/1.jpg" alt="First slide" />
+            <div class="carousel-caption d-md-block">
               <h2><a href="./html/SS22.html">PRIMAVERA SS22</a></h2>
               <p>UNA COLLEZIONE UNICA</p>
             </div>
           </div>
           <div class="carousel-item">
-            <img
-              class="d-block w-100"
-              src="./imagenes/2.jpg"
-              alt="Second slide"
-            />
-            <div class="carousel-caption d-none d-md-block">
+            <img class="d-block w-100" src="./imagenes/2.jpg" alt="Second slide" />
+            <div class="carousel-caption d-md-block">
               <h2><a href="./html/SS22.html">PRIMAVERA SS22</a></h2>
               <p>UNA COLLEZIONE UNICA</p>
             </div>
           </div>
           <div class="carousel-item">
-            <img
-              class="d-block w-100"
-              src="./imagenes/3.jpg"
-              alt="Third slide"
-            />
-            <div class="carousel-caption d-none d-md-block">
+            <img class="d-block w-100" src="./imagenes/3.jpg" alt="Third slide" />
+            <div class="carousel-caption d-md-block">
               <h2><a href="./html/SS22.html">PRIMAVERA SS22</a></h2>
               <p>UNA COLLEZIONE UNICA</p>
             </div>
           </div>
         </div>
-        <a
-          class="carousel-control-prev"
-          href="#carouselExampleIndicators"
-          role="button"
-          data-slide="prev"
-        >
+        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
           <span class="carousel-control-prev-icon" aria-hidden="true"></span>
           <span class="sr-only">Previous</span>
         </a>
-        <a
-          class="carousel-control-next"
-          href="#carouselExampleIndicators"
-          role="button"
-          data-slide="next"
-        >
+        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
           <span class="carousel-control-next-icon" aria-hidden="true"></span>
           <span class="sr-only">Next</span>
         </a>
@@ -131,11 +91,7 @@
       </ul>
     </footer>
 
-    <script
-      src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
-      integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
-      crossorigin="anonymous"
-    ></script>
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"
       integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
