--- a/html/SS22.html
+++ b/html/SS22.html
@@ -4,8 +4,14 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="La coleccion de invierno del 2022" />
+    <meta property="og:url" content="https://continuara10.github.io/page/" />
+    <meta property="og:title" content="FVCK" />
+    <meta property="og:image" content="../imagenes/open.jpg" />
+    <meta property="og:description" content="Coleccion de invierno del 2022" />
+    <meta property="og:type" content="website" />
+    <meta name="description" content="Coleccion de invierno del 2022" />
     <meta name="keywords" content="TEMPORADA, ROPA, ROPA DE MUJER, ROPA DE HOMBRE, COLECCION DE ROPA, ROPA DE INVIERNO" />
+    <link rel="icon" type="" href="../imagenes/icono.png" />
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
@@ -25,19 +31,19 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a class="nav-link" href="../index.html">INICIO <span class="sr-only">(current)</span></a>
+              <a class="nav-link" href="../index.html">HOME<span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="./hombre.html">HOMBRE</a>
+              <a class="nav-link" href="./hombre.html">MEN</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="./mujer.html">MUJER</a>
+              <a class="nav-link" href="./mujer.html">WOMEN</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="./SS22.html">SS22</a>
+              <a class="nav-link" href="./SS22.html">SPRING</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="./contacto.html">CONTACTO</a>
+              <a class="nav-link" href="./contacto.html">CONTACT</a>
             </li>
           </ul>
         </div>
@@ -56,7 +62,7 @@
       ></iframe>
     </main>
 
-    <h2 class="h2">TEMPORADA DE PRIMAVERA</h2>
+    <h2 class="h2_ss">SPRING SEASON</h2>
 
     <section class="tarjeta_ss">
       <div class="galeria" style="--i: url(../imagenes/ss22/ss1.jpg)">
@@ -83,8 +89,8 @@
 
     <footer>
       <ul>
-        <li><a href="./contacto.html">Contacto</a></li>
-        <li><a href="#">Terminos Y Condiciones</a></li>
+        <li><a href="./contacto.html">Contact</a></li>
+        <li><a href="#">Privacy</a></li>
         <li><a href="https://www.instagram.com/">Instagram</a></li>
       </ul>
     </footer>
