--- a/html/contacto.html
+++ b/html/contacto.html
@@ -4,8 +4,14 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta property="og:url" content="https://continuara10.github.io/page/" />
+    <meta property="og:title" content="FVCK" />
+    <meta property="og:image" content="../imagenes/open.jpg" />
+    <meta property="og:description" content="Pagina de contacto de FVCK" />
+    <meta property="og:type" content="website" />
     <meta name="description" content="Pagina de contacto de FVCK" />
     <meta name="keywords" content="TEMPORADA, ROPA, ROPA DE MUJER, COLECCION DE ROPA, ROPA DE INVIERNO" />
+    <link rel="icon" type="" href="../imagenes/icono.png" />
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
@@ -25,69 +31,47 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a class="nav-link" href="../index.html">INICIO <span class="sr-only">(current)</span></a>
+              <a class="nav-link" href="../index.html">HOME<span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="./hombre.html">HOMBRE</a>
+              <a class="nav-link" href="./hombre.html">MEN</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="./mujer.html">MUJER</a>
+              <a class="nav-link" href="./mujer.html">WOMEN</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="./SS22.html">SS22</a>
+              <a class="nav-link" href="./SS22.html">SPRING</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="./contacto.html">CONTACTO</a>
+              <a class="nav-link" href="./contacto.html">CONTACT</a>
             </li>
           </ul>
         </div>
       </nav>
     </header>
 
-    <form>
-      <div class="form-row">
-        <div class="form-group col-md-6">
-          <label for="inputEmail4">Email</label>
-          <input type="email" class="form-control" id="inputEmail4" placeholder="Email" />
+    <div class="form">
+      <form action="">
+        <h2>Contact US!</h2>
+        <div>
+          <input class="input" type="text" name="name" id="" placeholder="Name & Surname" required />
         </div>
-        <div class="form-group col-md-6">
-          <label for="inputPassword4">Contraseña</label>
-          <input type="password" class="form-control" id="inputPassword4" />
+        <div>
+          <input class="input" type="email" name="" id="" placeholder="Email" required />
         </div>
-      </div>
-      <div class="form-group">
-        <label for="inputAddress">Direccion</label>
-        <input type="text" class="form-control" id="inputAddress" />
-      </div>
-      <div class="form-group">
-        <label for="inputAddress2">Telefono</label>
-        <input type="text" class="form-control" id="inputAddress2" />
-      </div>
-      <div class="form-row">
-        <div class="form-group col-md-6">
-          <label for="inputCity">Provincia</label>
-          <input type="text" class="form-control" id="inputCity" />
+        <div>
+          <textarea class="input" name="" id="" cols="50" rows="5" placeholder="Message" required></textarea>
         </div>
-        <div class="form-group col-md-4">
-          <label for="inputState">Ciudad</label>
-          <input type="text" class="form-control" id="inputCity" />
+        <div>
+          <input class="submit" type="submit" value="Send" />
         </div>
-        <div class="form-group col-md-2">
-          <label for="inputZip">Codigo Postal</label>
-          <input type="text" class="form-control" id="inputZip" />
-        </div>
-      </div>
-      <div class="mb-3">
-        <label for="formFile" class="form-label">Selecciona tu CV</label>
-        <input class="form-control" type="file" id="formFile" />
-      </div>
-      <button type="submit" class="btn btn-primary">Enviar</button>
-    </form>
+      </form>
+    </div>
 
     <footer>
       <ul>
-        <li><a href="./contacto.html">Contacto</a></li>
-        <li><a href="#">Terminos Y Condiciones</a></li>
+        <li><a href="./contacto.html">Contact</a></li>
+        <li><a href="#">Privacy</a></li>
         <li><a href="https://www.instagram.com/">Instagram</a></li>
       </ul>
     </footer>
