--- a/html/hombre.html
+++ b/html/hombre.html
@@ -4,8 +4,14 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="La coleccion de moda de hombre, temporada de invierno 2022" />
+    <meta property="og:url" content="https://continuara10.github.io/page/" />
+    <meta property="og:title" content="FVCK" />
+    <meta property="og:image" content="../imagenes/open.jpg" />
+    <meta property="og:description" content="Temporada de invierno hombre 2022" />
+    <meta property="og:type" content="website" />
+    <meta name="description" content="Temporada de invierno hombre 2022" />
     <meta name="keywords" content="TEMPORADA, ROPA, ROPA DE HOMBRE, COLECCION DE ROPA, ROPA DE INVIERNO" />
+    <link rel="icon" type="" href="../imagenes/icono.png" />
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
@@ -25,19 +31,19 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a class="nav-link" href="../index.html">INICIO <span class="sr-only">(current)</span></a>
+              <a class="nav-link" href="../index.html">HOME<span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="./hombre.html">HOMBRE</a>
+              <a class="nav-link" href="./hombre.html">MEN</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="./mujer.html">MUJER</a>
+              <a class="nav-link" href="./mujer.html">WOMEN</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="./SS22.html">SS22</a>
+              <a class="nav-link" href="./SS22.html">SPRING</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="./contacto.html">CONTACTO</a>
+              <a class="nav-link" href="./contacto.html">CONTACT</a>
             </li>
           </ul>
         </div>
@@ -54,14 +60,14 @@
           <div class="carousel-item active">
             <img class="d-block w-100" src="../imagenes/hombre/hombre.jpg" alt="First slide" />
             <div class="carousel-caption d-md-block">
-              <h2><a href="#">COLECCIÓN HOMBRES</a></h2>
+              <h2><a href="#">MEN COLLECTION</a></h2>
               <p>UNA COLLEZIONE UNICA</p>
             </div>
           </div>
           <div class="carousel-item">
             <img class="d-block w-100" src="../imagenes/hombre/hombre1.jpg" alt="Second slide" />
             <div class="carousel-caption d-md-block">
-              <h2><a href="#">COLECCIÓN HOMBRES</a></h2>
+              <h2><a href="#">MEN COLLECTION</a></h2>
               <p>UNA COLLEZIONE UNICA</p>
             </div>
           </div>
@@ -77,42 +83,42 @@
       </div>
     </section>
 
-    <h2 class="h2_hombre">SECCIONES</h2>
+    <h2 class="h2_hombre">SECTION</h2>
 
     <section class="tarjeta_hombre">
       <div class="galeria" style="--i: url(../imagenes/hombre/abrigo.jpg)">
         <div class="texto">
-          <a href="#">ABRIGOS</a>
+          <a href="#">COAT</a>
           <p>Lorem ipsum dolor sit amet.</p>
         </div>
       </div>
       <div class="galeria" style="--i: url(../imagenes/hombre/accesorios.jpg)">
         <div class="texto">
-          <a href="#">ACCESORIOS</a>
+          <a href="#">ACCESSORIES</a>
           <p>Lorem ipsum dolor sit amet.</p>
         </div>
       </div>
       <div class="galeria" style="--i: url(../imagenes/hombre/pantalon.jpg)">
         <div class="texto">
-          <a href="#">PANTALONES</a>
+          <a href="#">PANTS</a>
           <p>Lorem ipsum dolor sit amet.</p>
         </div>
       </div>
       <div class="galeria" style="--i: url(../imagenes/hombre/zapatilla.jpg)">
         <div class="texto">
-          <a href="#">ZAPATILLAS</a>
+          <a href="#">SNEAKER</a>
           <p>Lorem ipsum dolor sit amet.</p>
         </div>
       </div>
       <div class="galeria" style="--i: url(../imagenes/hombre/remera.jpg)">
         <div class="texto">
-          <a href="#">REMERAS</a>
+          <a href="#">T-SHIRTS</a>
           <p>Lorem ipsum dolor sit amet.</p>
         </div>
       </div>
       <div class="galeria" style="--i: url(../imagenes/hombre/ropainterior.jpg)">
         <div class="texto">
-          <a href="#">ROPA INTERIOR</a>
+          <a href="#">UNDERWEAR</a>
           <p>Lorem ipsum dolor sit amet.</p>
         </div>
       </div>
@@ -120,8 +126,8 @@
 
     <footer>
       <ul>
-        <li><a href="./contacto.html">Contacto</a></li>
-        <li><a href="#">Terminos Y Condiciones</a></li>
+        <li><a href="./contacto.html">Contact</a></li>
+        <li><a href="#">Privacy</a></li>
         <li><a href="https://www.instagram.com/">Instagram</a></li>
       </ul>
     </footer>
