--- a/index.html
+++ b/index.html
@@ -4,8 +4,14 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta property="og:url" content="https://continuara10.github.io/page/" />
+    <meta property="og:title" content="FVCK" />
+    <meta property="og:image" content="./imagenes/open.jpg" />
+    <meta property="og:description" content="FVCK, la marca de ropa numero 1 de Argentina" />
+    <meta property="og:type" content="website" />
     <meta name="description" content="FVCK, la marca de ropa numero 1 de Argentina" />
     <meta name="keywords" content="TEMPORADA, ROPA, ROPA DE HOMBRE, ROPA DE MUJER, COLECCION DE ROPA, ROPA DE INVIERNO" />
+    <link rel="icon" type="" href="./imagenes/icono.png" />
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
@@ -25,19 +31,19 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a class="nav-link" href="./index.html">INICIO <span class="sr-only">(current)</span></a>
+              <a class="nav-link" href="./index.html">HOME<span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="./html/hombre.html">HOMBRE</a>
+              <a class="nav-link" href="./html/hombre.html">MEN</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="./html/mujer.html">MUJER</a>
+              <a class="nav-link" href="./html/mujer.html">WOMEN</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="./html/SS22.html">SS22</a>
+              <a class="nav-link" href="./html/SS22.html">SPRING</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="./html/contacto.html">CONTACTO</a>
+              <a class="nav-link" href="./html/contacto.html">CONTACT</a>
             </li>
           </ul>
         </div>
@@ -55,21 +61,21 @@
           <div class="carousel-item active">
             <img class="d-block w-100" src="./imagenes/1.jpg" alt="First slide" />
             <div class="carousel-caption d-md-block">
-              <h2><a href="./html/SS22.html">PRIMAVERA SS22</a></h2>
+              <h2><a href="./html/SS22.html">SPRING 22</a></h2>
               <p>UNA COLLEZIONE UNICA</p>
             </div>
           </div>
           <div class="carousel-item">
             <img class="d-block w-100" src="./imagenes/2.jpg" alt="Second slide" />
             <div class="carousel-caption d-md-block">
-              <h2><a href="./html/SS22.html">PRIMAVERA SS22</a></h2>
+              <h2><a href="./html/SS22.html">SPRING 22</a></h2>
               <p>UNA COLLEZIONE UNICA</p>
             </div>
           </div>
           <div class="carousel-item">
             <img class="d-block w-100" src="./imagenes/3.jpg" alt="Third slide" />
             <div class="carousel-caption d-md-block">
-              <h2><a href="./html/SS22.html">PRIMAVERA SS22</a></h2>
+              <h2><a href="./html/SS22.html">SPRING 22</a></h2>
               <p>UNA COLLEZIONE UNICA</p>
             </div>
           </div>
@@ -85,10 +91,23 @@
       </div>
     </section>
 
+    <section class="tarjeta_index">
+      <div class="galeria" style="--i: url(../imagenes/indexH.jpg)">
+        <div class="texto">
+          <a href="./html/hombre.html">MEN</a>
+        </div>
+      </div>
+      <div class="galeria" style="--i: url(../imagenes/indexM.jpg)">
+        <div class="texto">
+          <a href="./html/mujer.html">WOMEN</a>
+        </div>
+      </div>
+    </section>
+
     <footer>
       <ul>
-        <li><a href="./html/contacto.html">Contacto</a></li>
-        <li><a href="#">Terminos Y Condiciones</a></li>
+        <li><a href="./html/contacto.html">Contact</a></li>
+        <li><a href="#">Privacy</a></li>
         <li><a href="https://www.instagram.com/">Instagram</a></li>
       </ul>
     </footer>
